Finalize versioned ingestion and evaluation flow